--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ date_format: "%B %d, %Y"
 
 # Layout
 
-show_social: true 
+show_social: true #
 show_excerpts: false       # show article excerpts on the home page
 show_frame: true           # adds a gray frame to the site
 show_sidebar: false        # show a sidebar instead of the usual header
@@ -17,8 +17,9 @@ show_sidebar: false        # show a sidebar instead of the usual header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "panyu.pdf", title: "CV"}
-  - {title: "About"}
+  - {file: "/panyu.pdf", title: "CV"}
+  - {title: "Lab", url: "http://ic.kaist.ac.kr/wiki/wiki.cgi?Main"}
+  - {title: "Blog", file:"/blog.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:panyu@kse.kaist.ac.kr"}
