--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ show_sidebar: false        # show a sidebar instead of the usual header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "/panyu.pdf", title: "CV"}
+  - {file: "panyu.pdf", title: "CV"}
   - {title: "Lab", url: "http://ic.kaist.ac.kr/wiki/wiki.cgi?Main"}
-  - {title: "Blog", file:"/blog.md"}
+  - {title: "Blog", file:"blog.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:panyu@kse.kaist.ac.kr"}
