--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ show_sidebar: false        # show a sidebar instead of the usual header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "panyu.pdf", title: "CV",icon: home}
-  - {title: "Lab", url: "http://ic.kaist.ac.kr/wiki/wiki.cgi?Main"}
+  - {title: "Lab", url: "http://ic.kaist.ac.kr"}
   - {title: "Blog", file:"blog.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
