--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ show_sidebar: false        # show a sidebar instead of the usual header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {title: "Lab", url: "http://ic.kaist.ac.kr"}
-  - {file: "/panyu.pdf", title: "CV", icon: home}
-  - {title: "Blog", file: "/blog.md"}
+  #- {file: "/panyu.pdf", title: "CV", icon: home}
+  #- {title: "Blog", file: "/blog.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:panyu@kse.kaist.ac.kr"}
