--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ external:                  # shows a footer with social links - for available ic
   - {title: Mail, icon: envelope, url: "mailto:panyu@kse.kaist.ac.kr"}
   - {title: Github, icon: github, url: "https://github.com/SteinPanyu"}
   - {title: Researchgate, icon: "ResearchGate.png", url: "https://www.researchgate.net/profile/Panyu-Zhang-2"}
-  - {title: LinkedIn, icon: linkedin, url: "https://www.linkedin.com/in/panyu-zhang-689a43178/"}
+  - {title: LinkedIn, icon: "LinkedIn.png", url: "https://www.linkedin.com/in/panyu-zhang-689a43178/"}
   #- {title: Subscribe, icon: rss, url: "/feed.xml"}
 
 comments:
