--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ show_sidebar: false        # show a sidebar instead of the usual header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {title: "CV", file: "/assets/Resume.pdf"}
+  - {title: "CV", file: "Resume.pdf"}
   - {title: "Lab", url: "http://ic.kaist.ac.kr"}
   - {title: "Research", file: "blog.md"}
 
